fixed scroll overflow, set absolute footer position, and embedded intro vid on homepage

--- a/client/app/App.scss
+++ b/client/app/App.scss
@@ -4,6 +4,8 @@ html, body, #root, .App {
   margin: 0;
   padding:0;
   height: 100%;
+  
+  overflow: hidden;
 }
 
 
