--- a/client/footer/footer.scss
+++ b/client/footer/footer.scss
@@ -4,10 +4,16 @@
     color: white;
     background-color: $black;
 
+    position: absolute;
+
+
     padding-top:1em;
-    position: relative;
     bottom: 0;
+    padding-bottom: 1em;
+
+    
     width: 100%;
+    height: 5rem;
 
 }
 
